--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 <body>
+    <div id="root">
+        <h1 v-blind:class='mieClassi'>titolo</h1>
+    </div>
+
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
