--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="root">
-        <h1 v-blind:class='mieClassi'>titolo</h1>
+        <h1>{{ message }}</h1>
+        <img src="imgSrc" alt="">
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
