--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="root">
         <h1>{{ message }}</h1>
-        <img src="imgSrc" alt="">
+        <img :src="imgSrc" alt="">
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
